@@ -324,7 +324,7 @@ class Person(SourceBase, NoteBase, AttributeBase, MediaBase,
         return [self.primary_name] + self.media_list + \
                     self.alternate_names + self.address_list + \
                     self.attribute_list + self.lds_ord_list + \
-                    self.person_ref_list
+                    self.person_ref_list + self.event_ref_list
 
     def get_referenced_handles(self):
         """
@@ -345,8 +345,7 @@ class Person(SourceBase, NoteBase, AttributeBase, MediaBase,
         @return: Returns the list of objects refereincing primary objects.
         @rtype: list
         """
-        return self.get_sourcref_child_list() + self.source_list \
-               + self.event_ref_list
+        return self.get_sourcref_child_list() + self.source_list
 
     def set_primary_name(self, name):
         """
